--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/MyAddressBookPlus/v16/Server/sqlite3
+/packages
