--- a/MyAddressBookPlus/bin/MyAddressBook+.dll.config
+++ b/MyAddressBookPlus/bin/MyAddressBook+.dll.config
@@ -31,6 +31,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6" />
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <httpErrors errorMode="Detailed" />
