--- a/MyAddressBookPlus/Web.config
+++ b/MyAddressBookPlus/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="SqlDataConnection" connectionString="data source=mesqlserv.database.windows.net;initial catalog=MyAddressBookPlus;persist security info=True;user id=mesqllogin;password=P@$$w0rd;MultipleActiveResultSets=True;" />
+    <add name="SqlDataConnection" connectionString="data source=mesqlserv.database.windows.net;initial catalog=MyAddressBookPlus;persist security info=True;MultipleActiveResultSets=True;" />
   </connectionStrings>
   <appSettings>
     <!-- ClientId and ClientSecret refer to the web application registration with Azure Active Directory -->
